development/modules/private_rt.tf
resource "aws_eip" "eip_for_the_nat_gateway" {
    vpc = true

    tags = {
        Name = "jenkins-instance-eip_for_the_nat_gateway"
    }
}

resource "aws_nat_gateway" "nat_gateway" {
    allocation_id = aws_eip.eip_for_the_nat_gateway.id
    subnet_id = element(var.public_subnets.*.id, 0)

    tags = {
        Name = "jenkins-instance_nat_gateway"
    }
}

resource "aws_route_table" "private_rt" {
    vpc_id = var.vpc_id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat_gateway.id
    } 

    tags = {
        Name = "private_rt_${var.vpc_name}"
    }
}

resource "aws_route_table_association" "private" {
    count = var.private_subnets_count
    subnet_id = element(var.private_subnets.*.id, count.index)
    route_table_id = aws_route_table.private_rt.id
}
